fix x-overflow

--- a/master.css
+++ b/master.css
@@ -3,6 +3,7 @@
 }
 html, body {
     height: 100%;
+    overflow-x: hidden !important
 }
 .wrapper {
     min-height: 100%;
